[package]
name = "shuttle-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.18"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
rand = "0.8.5"
chrono = "0.4.26"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
clap = { version = "4.3.23", features = ["derive"] }

[dev-dependencies]
axum-test = "12.2.0"